# coder-studio

./: .gitignore  .impeccable.md  CHANGELOG.md  README.en.md  README.md  index.html  package.json  playwright.config.ts  playwright.port-4174.config.ts  playwright.port-4176.config.ts  playwright.port-4177.config.ts  playwright.port-4179.config.ts  playwright.release.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prototype.html  tsconfig.json  vite.config.ts
.cargo/: config.toml
.changeset/: config.json
apps/server/: Cargo.toml  tauri.conf.json
apps/server/capabilities/: main.json
apps/server/src/: app.rs  main.rs  models.rs  runtime.rs
apps/server/src/auth/: mod.rs
apps/server/src/command/: http.rs
apps/server/src/infra/: db.rs  mod.rs  runtime.rs  time.rs
apps/server/src/services/: agent.rs  agent_client.rs  ansi_stream.rs  app_settings.rs  artifact_cache.rs  claude.rs  codex.rs  filesystem.rs  git.rs  mod.rs  provider_hooks.rs  provider_registry.rs  session_runtime.rs  supervisor.rs  system.rs  terminal.rs  terminal_gateway.rs  tmux.rs  utf8_stream.rs  workspace.rs  workspace_runtime.rs  workspace_watch.rs
apps/server/src/ws/: mod.rs  outbound_batcher.rs  protocol.rs  server.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  main.rs  models.rs
src-tauri/src/auth/: ip_guard.rs  mod.rs
src-tauri/src/command/: http.rs
src-tauri/src/infra/: db.rs  runtime.rs  support.rs  time.rs
src-tauri/src/services/: agent.rs  claude.rs  filesystem.rs  git.rs  mod.rs  system.rs  terminal.rs  workspace.rs
src-tauri/src/ws/: server.rs
(+355 files in other folders)
