[package]
name = "coder-studio"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
getrandom = "0.2"
portable-pty = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
url = "2"
